Update 3.01 Research, implement, and manage engineering processes using secure design principles.md

--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -196,10 +196,35 @@ By scoring each of these factors, you can prioritize which threats are the most 
 |         | **5. Vulnerability Analysis**     | Identify weak points in systems and code.                                                               | Security scans, config reviews.                                                                      |
 |         | **6. Attack Modeling**            | Simulate how attacks could exploit vulnerabilities.                                                     | Helps assess likelihood and impact.                                                                  |
 |         | **7. Risk and Impact Analysis**   | Prioritize risks and decide mitigation strategies.                                                      | Finalize the threat model and recommend actions.                                                     |
+### Open Questions ###
+
+1. What is the main purpose of threat modeling in secure design?
+
+<details> <summary>Show answer</summary> The main purpose of threat modeling is to systematically identify, assess, and prioritize potential threats to a system so that security controls can be designed and implemented proactively. </details>
+
+2. Name two common approaches to threat modeling.
+
+<details> <summary>Show answer</summary> Two common approaches to threat modeling are STRIDE (Spoofing, Tampering, Repudiation, Information Disclosure, Denial of Service, Elevation of Privilege) and PASTA (Process for Attack Simulation and Threat Analysis). </details>
+
+3. How does threat modeling help during the software development lifecycle?
+
+<details> <summary>Show answer</summary> Threat modeling helps by integrating security considerations early in the software development lifecycle, allowing developers to identify vulnerabilities and design mitigations before implementation. </details>
+
+4. What are the key components that should be considered in a threat model?
+
+<details> <summary>Show answer</summary> Key components include the system architecture, data flows, assets, potential threats, vulnerabilities, and the security controls needed to mitigate those threats. </details>
+
+5. Why is it important to update threat models regularly?
+
+<details> <summary>Show answer</summary> Threat models should be updated regularly because systems evolve, new threats emerge, and previously unknown vulnerabilities can appear, so ongoing assessment ensures that security measures remain effective. </details>
+
+---
 
 ## 3.1.2 Least Privilege ##
 
-The principle of least privilege is a fundamental concept in cybersecurity and is crucial for minimizing potential security risks. It refers to the practice of granting users, systems, or processes only the minimum access necessary to perform their tasks or functions—no more, no less. By limiting privileges to the bare minimum required for each role, least privilege helps reduce the attack surface and limits the potential damage from accidental or malicious actions. Least privilege is essential to the confidentiality, integrity, and availability of information. It aims to prevent unauthorized access to sensitive data, reduce opportunities for privilege escalation, and ensure that security breaches or system compromises have limited impact.
+The principle of least privilege is a fundamental concept in cybersecurity and is crucial for minimizing potential security risks. It refers to the practice of granting users, systems, or processes only the minimum access necessary to perform their tasks or functions—no more, no less. 
+
+By limiting privileges to the bare minimum required for each role, least privilege helps reduce the attack surface and limits the potential damage from accidental or malicious actions. Least privilege is essential to the confidentiality, integrity, and availability of information. It aims to prevent unauthorized access to sensitive data, reduce opportunities for privilege escalation, and ensure that security breaches or system compromises have limited impact.
 
 Here’s how the principle can be implemented in practice:
 
@@ -212,6 +237,30 @@ Here’s how the principle can be implemented in practice:
 **Regular Audits:** It is important to regularly review and audit access rights to ensure they still align with current roles and responsibilities. Privileges should be adjusted when employees change roles, leave the organization, or when a job function no longer requires specific access.
 
 **Principle of Minimal Permissions:** The idea is to grant the least amount of access required to perform a job. For example, if a user only needs to read files, they should not be granted write access, and certainly not administrative permission.
+
+### Open Questions ###
+
+1. What is the main goal of the principle of least privilege?
+
+<details> <summary>Show answer</summary> The main goal of the principle of least privilege is to grant users, systems, or processes only the minimum access necessary to perform their tasks, reducing the attack surface and limiting potential damage from accidental or malicious actions. </details>
+
+2. How can access control help implement least privilege?
+
+<details> <summary>Show answer</summary> Access control helps implement least privilege by assigning specific roles and permissions to users or processes based on their job responsibilities, ensuring they can only access the resources necessary for their tasks. </details>
+
+3. What is the role of segregation of duties in supporting least privilege?
+
+<details> <summary>Show answer</summary> Segregation of duties reinforces least privilege by requiring that critical tasks or actions involve more than one person, preventing a single user from misusing privileges to compromise the system. </details>
+
+4. Why are temporary privileges important in the context of least privilege?
+
+<details> <summary>Show answer</summary> Temporary privileges allow users to have elevated access for specific tasks while ensuring that such access is revoked once the task is completed, minimizing the risk of misuse or unintended access. </details>
+
+5. Why should organizations perform regular audits of access rights?
+
+<details> <summary>Show answer</summary> Regular audits ensure that privileges still align with current roles and responsibilities, allowing adjustments when employees change roles, leave the organization, or no longer need certain access, thereby maintaining security. </details>
+
+---
 
 ## 3.1.3 Defense in depth ##
 
@@ -229,17 +278,66 @@ The concept of layered defense ensures that security is not a single point of fa
 
 :link: See also [1.9.4 Applicable types of controls (e.g., preventive, detection, corrective)](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#194-applicable-types-of-controls-eg-preventive-detection-corrective)
 
+### Open Questions ###
+
+1. What is the main idea behind the principle of layered defense in cybersecurity?
+
+<details> <summary>Show answer</summary> Layered defense, or defense-in-depth, emphasizes using multiple layers of security controls to protect critical assets so that if one control fails, others continue to provide protection, reducing the risk of a single point of failure. </details>
+
+2. What are the three types of security controls typically used in a layered defense strategy?
+
+<details> <summary>Show answer</summary> The three types of controls are preventive (to stop attacks), detective (to identify and alert on suspicious activity), and corrective (to restore systems after an attack or failure). </details>
+
+3. Why is it risky to rely on a single security control to protect critical assets?
+
+<details> <summary>Show answer</summary> Relying on a single security control is risky because if that control fails or is bypassed, the critical asset becomes exposed. Layered defense mitigates this risk by providing multiple lines of protection. </details>
+
+4. Give two examples of preventive security controls used in layered defense.
+
+<details> <summary>Show answer</summary> Firewalls and access controls are examples of preventive security controls that aim to stop attacks before they occur. </details>
+
+5. How do corrective controls contribute to a layered defense strategy?
+
+<details> <summary>Show answer</summary> Corrective controls help restore systems and data after an attack or failure, such as using data backups or recovery procedures, ensuring business continuity and minimizing damage. </details>
+
+
+---
+
 ## 3.1.4 Secure Defaults ##
 
 The secure-by-default principle ensures that systems are designed with strong security settings right from the start, without requiring users to manually enable security features or configure protections. This approach minimizes vulnerabilities by making the most secure options the default, even if they are not always the most convenient or high-performing settings.
 
-:bulb: The tyranny of the default in information security refers to the tendency of users and organizations to stick with default settings, configurations, or behaviors, even when they are insecure. Defaults are powerful because they require effort to change, and most people assume they are safe or optimal.
+:bulb: **The tyranny of the default** in information security refers to the tendency of users and organizations to stick with default settings, configurations, or behaviors, even when they are insecure. Defaults are powerful because they require effort to change, and most people assume they are safe or optimal.
 
 Let’s think for example about password policies in modern operating systems. Many systems now require users to create strong passwords by default, enforcing rules such as a minimum length, complexity (uppercase, lowercase, numbers, and special characters), and expiration periods.
 While these restrictions improve security by preventing weak passwords, they might not always be the most user-friendly option. Some users may find it inconvenient to remember complex passwords or to change them frequently. However, the system is designed this way to reduce the risk of unauthorized access. If an organization decides to relax these policies for usability reasons, it must make an intentional decision based on its security needs and risk tolerance..
 By enforcing secure defaults, organizations reduce the risk of misconfigurations and human error, ensuring that systems remain protected even before additional security measures are applied.
 
 :necktie: Never assume that the default settings, or a standard procedure are secure.
+
+### Open Questions ###
+
+1. What is the main goal of the secure-by-default principle?
+
+<details> <summary>Show answer</summary> The secure-by-default principle ensures that systems are designed with strong security settings from the start, minimizing vulnerabilities by making secure options the default without requiring users to manually enable them. </details>
+
+2. What does the term “tyranny of the default” mean in information security?
+
+<details> <summary>Show answer</summary> The “tyranny of the default” refers to the tendency of users and organizations to keep default settings or configurations, even when they are insecure, because changing them requires effort or expertise. </details>
+
+3. How do password policies in modern operating systems illustrate the secure-by-default principle?
+
+<details> <summary>Show answer</summary> Modern systems often enforce strong password requirements by default—such as length, complexity, and expiration rules—to prevent weak passwords, ensuring security even if users do not modify these settings. </details>
+
+4. What risk arises when organizations relax secure default settings for usability reasons?
+
+<details> <summary>Show answer</summary> Relaxing secure defaults can increase the risk of unauthorized access or system compromise, as weaker configurations reduce protection against common attacks and misconfigurations. </details>
+
+5. Why should organizations never assume default settings are secure?
+
+<details> <summary>Show answer</summary> Organizations should never assume defaults are secure because standard configurations may prioritize convenience or performance over security, leaving systems exposed unless reviewed and hardened. </details>
+
+---
 
 ## 3.1.5 Fail Securely ##
 
@@ -262,6 +360,31 @@ In general, security-focused systems should favor fail-secure designs to prevent
 
 :bulb: The try...catch mechanism in programming is used to handle errors gracefully by attempting to execute a block of code (try) and catching exceptions (catch) to prevent the application from crashing. It ensures that when an error occurs, the system does not expose sensitive data or weaken security— instead, it follows a controlled failure path, maintaining security protections even in unexpected situations.
 
+### Open Questions ###
+
+1. What is the main difference between a fail-open and a fail-secure system design?
+
+<details> <summary>Show answer</summary> A fail-open system prioritizes **availability**, keeping access open during a failure, while a fail-secure system prioritizes **security**, blocking access if an error occurs. The choice depends on whether system uptime or protection of assets is more critical. </details>
+
+2. Why might a hospital’s access control system be designed to fail open instead of fail secure?
+
+<details> <summary>Show answer</summary> Hospitals often choose a fail-open design to ensure **safety and accessibility** during emergencies. For example, if an access control system fails, doors should unlock so that patients and staff can move freely, prioritizing human life over security restrictions. </details>
+
+3. What principle supports the idea that systems should deny actions by default unless explicitly allowed?
+
+<details> <summary>Show answer</summary> The **default deny** principle supports this approach. It ensures that only explicitly permitted actions are allowed, reducing the risk of unauthorized access or unintended system behavior in case of misconfigurations or failures. </details>
+
+4. How does the try...catch mechanism in programming relate to secure system failure management?
+
+<details> <summary>Show answer</summary> The `try...catch` mechanism ensures that when an error occurs, it’s handled in a **controlled and secure way**, preventing application crashes or data exposure. This reflects the principle of designing systems that fail safely without compromising security. </details>
+
+5. When designing secure systems, what factors should influence the choice between fail-open and fail-secure behavior?
+
+<details> <summary>Show answer</summary> The decision depends on the system’s **purpose, risk tolerance, and priorities**. Environments prioritizing availability (like emergency services) may use fail-open, while those focused on confidentiality and integrity (like banking or cybersecurity systems) should use fail-secure. </details>
+
+
+---
+
 ## 3.1.6 Segregation of Duties ##
 
 Segregation of Duties (SoD) is a fundamental security principle designed to reduce the risk of fraud, errors, and unauthorized activities by ensuring that no single individual has complete control over critical tasks. The idea is to divide responsibilities among multiple people so that a single person cannot execute a process from start to finish without oversight. This reduces the risk of abuse, whether intentional (e.g., fraud) or accidental (e.g., errors).
@@ -271,6 +394,30 @@ Segregation of Duties (SoD) is a fundamental security principle designed to redu
 SoD helps prevent conflicts of interest, fraudulent activities, and security breaches. If one person has too much control, they could manipulate data, bypass security controls, or conceal unauthorized actions. By requiring multiple individuals to complete a process, organizations ensure checks and balances, making it harder for any single individual to exploit the system.
 
 For example,  a security administrator responsible for setting user permissions should not also be in charge of monitoring security logs. If the same person had both roles, they could grant themselves unauthorized access and erase any traces of their activity. Instead, one person should configure permissions, while another independently audits logs for suspicious activity.
+
+### Open Questions ###
+
+1. What is the primary purpose of Segregation of Duties (SoD) in information security?
+
+<details> <summary>Show answer</summary> The primary purpose of SoD is to **reduce the risk of fraud, errors, and unauthorized actions** by ensuring that no single individual has full control over a critical process. Responsibilities are divided among multiple people to maintain checks and balances. </details>
+
+2. How does Segregation of Duties help prevent security breaches or fraud?
+
+<details> <summary>Show answer</summary> By dividing key responsibilities, SoD ensures that **malicious or negligent actions require collusion** between two or more individuals. This makes it harder for one person to manipulate systems, commit fraud, or hide unauthorized activities. </details>
+
+3. Give an example of how poor segregation of duties could lead to a security issue.
+
+<details> <summary>Show answer</summary> If a security administrator who assigns user permissions is also responsible for reviewing audit logs, they could **grant themselves unauthorized access** and then delete or alter the logs to hide their actions. Separating these roles prevents such abuse. </details>
+
+4. What is the main difference between segregation of duties and the principle of least privilege?
+
+<details> <summary>Show answer</summary> While **least privilege** limits the access rights of each user to only what’s necessary for their job, **segregation of duties** focuses on dividing tasks among multiple people to prevent any one individual from having unchecked power over a process. </details>
+
+5. In what type of organizational process is Segregation of Duties most critical?
+
+<details> <summary>Show answer</summary> SoD is most critical in **financial, administrative, and security-sensitive processes**, such as approving transactions, managing user access, or deploying code changes—where a lack of oversight could result in fraud, errors, or security breaches. </details>
+
+---
 
 ## 3.1.7 Keep it simple and small ##
 
@@ -301,6 +448,31 @@ For example, consider a company setting up a firewall to protect its network. In
 *Computer minimalism* is the practice of designing and using computing systems with as little complexity as possible. This includes using lightweight operating systems, writing efficient code, and avoiding unnecessary software dependencies. The goal is to enhance performance, security, and maintainability while reducing resource consumption. Examples include minimalistic Linux distributions like Alpine Linux and simple text-based interfaces instead of graphical user interfaces.
 
 *DRY (Don’t Repeat Yourself)* in software development emphasizes reducing duplication by ensuring that every piece of knowledge (code, data, logic) exists in a single place. This improves maintainability, reduces errors, and makes updates easier. For instance, instead of copying the same function across multiple files, developers should create a reusable function that can be referenced wherever needed.
+
+### Open Questions ###
+
+1. What is the main goal of the Keep It Simple and Small (KISS) principle in cybersecurity?
+
+<details> <summary>Show answer</summary> The KISS principle aims to **reduce system complexity** by designing simple, minimal, and efficient security controls. Simplicity helps decrease vulnerabilities, ease maintenance, and improve reliability by reducing the number of components and potential failure points. </details>
+
+2. Why does system complexity increase security risks?
+
+<details> <summary>Show answer</summary> Complex systems have **more code, configurations, and dependencies**, which expand the attack surface and create more opportunities for bugs, misconfigurations, and human errors. A simpler system is easier to secure, test, and audit. </details>
+
+3. How does the KISS principle improve system performance and reliability?
+
+<details> <summary>Show answer</summary> Simpler systems typically require **fewer resources and interdependencies**, making them faster, more efficient, and less prone to failure. They are also easier to troubleshoot and recover, which enhances both performance and reliability. </details>
+
+4. What is YAGNI, and how does it relate to the KISS principle?
+
+<details> <summary>Show answer</summary> **YAGNI (You Ain’t Gonna Need It)** advises developers to avoid adding features that are not immediately necessary. It aligns with the KISS principle by discouraging unnecessary complexity and focusing only on essential functionality to keep systems simple and secure. </details>
+
+5. How does the Rule of Least Power contribute to simpler and more secure systems?
+
+<details> <summary>Show answer</summary> The **Rule of Least Power** recommends using the least powerful language or technology needed for a task. Simpler tools—like static HTML instead of JavaScript—are easier to secure, maintain, and analyze, supporting the KISS principle’s goal of minimizing complexity and risk. </details>
+
+
+---
 
 ## 3.1.8 Zero Trust or Trust but Verify ##
 
@@ -340,6 +512,31 @@ For example, imagine an organization where employees use VPN access to work remo
 - The system verifies device compliance, ensuring that security patches and antivirus software are up to date.
 - Once inside the network, employees' activities are monitored for suspicious behavior—such as accessing unauthorized files or logging in from an unusual location.
 
+### Open Questions ###
+
+1. What is the main idea behind the Zero Trust security model?
+
+<details> <summary>Show answer</summary> Zero Trust is based on the principle that **no user or device should be trusted by default**, whether inside or outside the network. Every request must be verified explicitly through authentication, authorization, and continuous validation to prevent unauthorized access and lateral movement. </details>
+
+2. How does the “Assume Breach” mindset strengthen security in a Zero Trust architecture?
+
+<details> <summary>Show answer</summary> “Assume Breach” means designing systems under the assumption that attackers may already be inside the network. This leads to **stronger monitoring, isolation, and containment controls**, reducing the potential damage if a compromise occurs. </details>
+
+3. What role does micro-segmentation play in a Zero Trust environment?
+
+<details> <summary>Show answer</summary> Micro-segmentation divides a network into **smaller, isolated zones**, limiting how far an attacker can move laterally after a breach. Each segment has its own access policies, helping contain threats and minimize exposure. </details>
+
+4. How does the “Trust but Verify” principle differ from Zero Trust?
+
+<details> <summary>Show answer</summary> “Trust but Verify” allows conditional access after trust is granted but continues to monitor for risks, while **Zero Trust eliminates implicit trust entirely**. In Zero Trust, every action is continuously verified, even for authenticated users or devices. </details>
+
+5. What technologies are commonly used to implement Zero Trust and Trust but Verify models?
+
+<details> <summary>Show answer</summary> Common technologies include **Multi-Factor Authentication (MFA)**, **Role-Based Access Control (RBAC)**, **Security Information and Event Management (SIEM)** for monitoring, and **endpoint compliance checks** to verify device health and user behavior continuously. </details>
+
+
+---
+
 ## 3.1.9 Privacy by Design ##
 
 Privacy by Design is a foundational concept in cybersecurity and data protection that emphasizes the integration of privacy protections into systems, processes, and technologies from the outset, rather than as an afterthought. This principle ensures that privacy concerns are embedded throughout the entire lifecycle of a product or service—from its design phase all the way through to its deployment and beyond.
@@ -372,6 +569,31 @@ Let’s consider the example of a healthcare app that collects and processes sen
 
 - Transparency: The company provides a clear privacy policy that outlines how data will be collected, used, and protected, giving users the confidence that their sensitive health information is being handled responsibly.
 
+### Open Questions ###
+
+1. What is the main purpose of the Privacy by Design principle?
+
+<details> <summary>Show answer</summary> Privacy by Design ensures that **privacy protections are integrated into systems and processes from the very beginning**, rather than being added later. It embeds privacy considerations throughout the entire lifecycle of a product or service to prevent data misuse and enhance user trust. </details>
+
+2. How does the principle of data minimization support Privacy by Design?
+
+<details> <summary>Show answer</summary> Data minimization means collecting, storing, and processing **only the personal data necessary** to achieve a specific purpose. This reduces exposure risk, simplifies security management, and aligns with privacy regulations by limiting unnecessary data handling. </details>
+
+3. Why are default privacy settings important in Privacy by Design?
+
+<details> <summary>Show answer</summary> Default privacy settings ensure that systems are **configured with maximum privacy protection by default**, without requiring users to change settings manually. This prevents accidental data exposure and aligns with the “secure by default” approach. </details>
+
+4. What does end-to-end security mean in the context of Privacy by Design?
+
+<details> <summary>Show answer</summary> End-to-end security involves protecting personal data **throughout its entire lifecycle**—from collection and storage to transmission and disposal. It relies on strong encryption, access controls, and regular audits to ensure continuous data protection. </details>
+
+5. How do transparency and user control contribute to Privacy by Design?
+
+<details> <summary>Show answer</summary> Transparency ensures users **understand how their data is collected, used, and shared**, while user control allows them to **access, modify, or delete their personal data**. Together, these elements build trust and promote compliance with privacy laws such as GDPR. </details>
+
+---
+
+
 ## 3.1.10 Shared Responsibility ##
 
 The principle of shared responsibility in cybersecurity refers to the idea that security is a joint effort between multiple parties, where the responsibilities for securing a system, data, and infrastructure are divided between the service provider and the customer. It’s a concept especially relevant in the context of cloud computing, managed services, and other outsourced IT environments. By understanding who is responsible for what, organizations can ensure that critical security measures are implemented effectively and that no security gaps are overlooked.
@@ -390,6 +612,31 @@ Key Aspects of Shared Responsibility:
 
 - Security Models and Agreements: Providers and customers often formalize the shared responsibility model through security documentation, contracts, and service-level agreements (SLAs). This helps avoid misunderstandings and ensures that both parties know exactly what security measures are in place.
 
+### Open Questions ###
+
+1. What does the principle of shared responsibility in cybersecurity mean?
+
+<details> <summary>Show answer</summary> The shared responsibility principle means that **security is a joint effort** between service providers and customers. Each party has defined duties: providers secure the underlying infrastructure, while customers secure their data, configurations, and applications. This collaboration ensures complete coverage without security gaps. </details>
+
+2. What are the main security responsibilities of a cloud service provider?
+
+<details> <summary>Show answer</summary> The service provider is responsible for securing the **physical and virtual infrastructure**, including data centers, networking, storage, hypervisors, and base platform software. They must ensure hardware reliability, patch management, and regulatory compliance at the infrastructure level. </details>
+
+3. What are the typical responsibilities of a customer under the shared responsibility model?
+
+<details> <summary>Show answer</summary> The customer manages **everything built on top of the provider’s infrastructure**, such as operating systems, data protection, identity and access management, application security, and proper configuration of cloud resources. Customers must also implement strong authentication and data encryption. </details>
+
+4. Why is a clear division of responsibilities critical in cloud security?
+
+<details> <summary>Show answer</summary> A clear division prevents **security blind spots** where both parties assume the other is responsible. By defining who secures each layer—such as infrastructure vs. applications—organizations can avoid misconfigurations and improve accountability and control. </details>
+
+5. How are shared responsibilities usually formalized between providers and customers?
+
+<details> <summary>Show answer</summary> Shared responsibilities are often defined through **contracts, SLAs, and security documentation**, which outline roles, controls, and reporting requirements. These agreements ensure transparency and alignment on security expectations, reducing the risk of misunderstandings or compliance failures. </details>
+
+
+---
+
 ## 3.1.11 Secure Access Service Edge ##
 
 Secure Access Service Edge (SASE) is a cybersecurity framework that integrates network security and wide-area networking (WAN) into a single cloud-based service. Coined by Gartner in 2019, SASE addresses the evolving needs of modern businesses by providing secure access to applications and data regardless of user location.
@@ -406,3 +653,26 @@ Key Principles of SASE are:
 
 - Identity-Driven Security – Access control is based on user identity, device, and security posture, rather than just network location.
 
+### Open Questions ###
+
+1. What is Secure Access Service Edge (SASE)?
+
+<details> <summary>Show answer</summary> Secure Access Service Edge (SASE) is a **cloud-based cybersecurity framework** that merges network security and wide-area networking (WAN) into a unified service. It provides secure and optimized access to applications and data regardless of where users or devices are located. </details>
+
+2. What problem does SASE aim to solve for modern organizations?
+
+<details> <summary>Show answer</summary> SASE addresses the challenge of **securing remote users and cloud-based applications** in a distributed IT environment. It eliminates the need to backhaul traffic through data centers and ensures consistent security policies across all users and locations. </details>
+
+3. What are the main security functions integrated into a SASE framework?
+
+<details> <summary>Show answer</summary> SASE combines multiple security services such as **Secure Web Gateway (SWG)**, **Cloud Access Security Broker (CASB)**, **Firewall as a Service (FWaaS)**, and **Data Loss Prevention (DLP)** into a single cloud-delivered solution, simplifying management and improving protection. </details>
+
+4. How does SASE ensure secure access to applications and data?
+
+<details> <summary>Show answer</summary> SASE applies **Zero Trust Network Access (ZTNA)** principles, requiring authentication and continuous verification of users and devices before granting access. Access decisions are based on identity, device posture, and context rather than network location. </details>
+
+5. What are the main benefits of SASE for organizations with a remote or hybrid workforce?
+
+<details> <summary>Show answer</summary> SASE provides **global reach with local performance** through distributed cloud Points of Presence (PoPs). It enhances user experience by reducing latency while maintaining strong, identity-based security controls—making it ideal for hybrid and remote work environments. </details>
+
+---
