Update 1.04 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md

--- a/DOMAIN1: Security and Risk Management/1.04 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
+++ b/DOMAIN1: Security and Risk Management/1.04 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
@@ -532,6 +532,19 @@ A comprehensive security program must align with a variety of external requireme
 | Industry Standards        | Are guidelines and best practices established by professional organizations and bodies within specific sectors. Examples include ISO/IEC 27001 for information security management systems and NIST Cybersecurity Framework.          |                              |                                                                                                                                                                   |
 | Regulatory Requirements   | Are mandates set forth by government agencies and regulatory bodies to ensure compliance with specific standards and protocols (examples are PCI DSS and SOX).                                                                          |                              |                                                                                                                                                                   |
 
+
+The following table tries to recap the charcteristics of Standards, Directives, Frameworks, Laws and Regulations.
+
+| Feature     | Standard                                                  | Framework                                                    | Regulation                                                              | Directive                                                                 | Law                                                                    |
+| :---------- | :-------------------------------------------------------- | :----------------------------------------------------------- | :---------------------------------------------------------------------- | :------------------------------------------------------------------------ | :--------------------------------------------------------------------- |
+| What is it? | A set of agreed-upon best practices, specifications, or rules. | A set of guidelines or principles for managing security.     | Mandatory rules set by a governing body that must be followed.          | A formal instruction or order issued by an authority or body.             | A legal rule or system that governs behavior in society.               |
+| Examples    | ISO 27001, NIST SP 800-53, PCI DSS                       | NIST Cybersecurity Framework, COBIT, CIS Controls            | GDPR, HIPAA, PCI DSS (when enforced)                                    | EU Directives like the GDPR Directive, NIS Directive                      | Data Protection Act, Computer Misuse Act, Cybersecurity Laws           |
+| Purpose     | To define best practices or benchmarks for security.      | To guide the implementation of cybersecurity practices.      | To enforce legal compliance, protect data, and prevent harm.            | To direct actions towards a specific security goal or measure.            | To regulate behavior, ensure national security and protect citizens.   |
+| Applicability | Global or industry-specific, depending on the standard.   | Broad applicability for organizational cybersecurity.        | Mandatory for organizations in specific jurisdictions or industries.    | Binding on member states of the relevant authority.                       | Jurisdiction-specific, applicable within a country or region.          |
+| Compliance  | Voluntary compliance, often leading to certification.     | Voluntary but recommended for better security posture.       | Legally enforced, with penalties for non-compliance.                    | Enforced by the organization issuing the directive/posture.               | Enforced by government authorities, legal penalties for violations.    |
+| Assessment  | Audits for certification (ISO 27001, PCI DSS).            | Self-assessment or third-party assessments.                  | Regulatory audits, investigations by government bodies.                 | Monitoring by relevant regulatory authority.                              | Legal audits, court orders, compliance checks.                         |
+
+
 ### Open Questions ###
 1. Explain what are contractual requirements and provide two examples.
 <details>
